EX-117-Merge-Confilct-Me: edit event, docker-compose, and dockerfiles